// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#dynamodb agent-connection generator > should add dynamodb dev dependency to agent dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#dynamodb agent-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "custom-agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
